FACES-1714 Develop Liferay Faces Showcase (use alloy:outputText instead of h:outputText)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/param/button.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/param/button.xhtml
@@ -12,7 +12,7 @@
 				<f:param name="componentUseCase" value="navigation" />
 				<f:param name="foo" value="1234" />
 				<alloy:icon name="arrow-left" />
-				<h:outputText value=" #{i18n['back-to-navigation-with']} foo=1234" />
+				<alloy:outputText value=" #{i18n['back-to-navigation-with']} foo=1234" />
 			</alloy:button>
 		</showcase:example>
 	</ui:define>
