--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/various-styles/button.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/various-styles/button.xhtml
@@ -7,81 +7,81 @@
 		<showcase:example>
 			<p>
 				<alloy:button styleClass="btn-primary">
-					<h:outputText value="#{i18n['primary']}" />
+					<alloy:outputText value="#{i18n['primary']}" />
 				</alloy:button>
 				<alloy:button styleClass="btn-info">
-					<h:outputText value="#{i18n['info']}" />
+					<alloy:outputText value="#{i18n['info']}" />
 				</alloy:button>
 				<alloy:button styleClass="btn-success">
-					<h:outputText value="#{i18n['success']} " />
+					<alloy:outputText value="#{i18n['success']} " />
 					<alloy:icon name="ok" />
 				</alloy:button>
 				<alloy:button styleClass="btn-warning">
-					<h:outputText value="#{i18n['warning']}" />
+					<alloy:outputText value="#{i18n['warning']}" />
 				</alloy:button>
 				<alloy:button styleClass="btn-danger">
 					<alloy:icon name="remove" />
-					<h:outputText value=" #{i18n['danger']}" />
+					<alloy:outputText value=" #{i18n['danger']}" />
 				</alloy:button>
 				<alloy:button styleClass="btn-inverse">
-					<h:outputText value="#{i18n['inverse']}" />
+					<alloy:outputText value="#{i18n['inverse']}" />
 				</alloy:button>
 				<alloy:button styleClass="btn-link">
-					<h:outputText value="#{i18n['link']}" />
+					<alloy:outputText value="#{i18n['link']}" />
 				</alloy:button>
 			</p>
 
 			<p>
 				<alloy:button styleClass="btn-primary btn-large">
-					<h:outputText value="#{i18n['large']}" />
+					<alloy:outputText value="#{i18n['large']}" />
 				</alloy:button>
 				<alloy:button styleClass="btn-large">
-					<h:outputText value="#{i18n['large']}" />
+					<alloy:outputText value="#{i18n['large']}" />
 				</alloy:button>
 			</p>
 
 			<p>
 				<alloy:button styleClass="btn-primary">
-					<h:outputText value="#{i18n['default']}" />
+					<alloy:outputText value="#{i18n['default']}" />
 				</alloy:button>
 				<alloy:button>
-					<h:outputText value="#{i18n['default']}" />
+					<alloy:outputText value="#{i18n['default']}" />
 				</alloy:button>
 			</p>
 
 			<p>
 				<alloy:button styleClass="btn-primary btn-small">
-					<h:outputText value="#{i18n['small']}" />
+					<alloy:outputText value="#{i18n['small']}" />
 				</alloy:button>
 				<alloy:button styleClass="btn-small">
-					<h:outputText value="#{i18n['small']}" />
+					<alloy:outputText value="#{i18n['small']}" />
 				</alloy:button>
 			</p>
 
 			<p>
 				<alloy:button styleClass="btn-primary btn-mini">
-					<h:outputText value="#{i18n['mini']}" />
+					<alloy:outputText value="#{i18n['mini']}" />
 				</alloy:button>
 				<alloy:button styleClass="btn-mini">
-					<h:outputText value="#{i18n['mini']}" />
+					<alloy:outputText value="#{i18n['mini']}" />
 				</alloy:button>
 			</p>
 
 			<p>
 				<alloy:button disabled="true" styleClass="btn-primary">
-					<h:outputText value="#{i18n['disabled']}" />
+					<alloy:outputText value="#{i18n['disabled']}" />
 				</alloy:button>
 				<alloy:button disabled="true">
-					<h:outputText value="#{i18n['disabled']}" />
+					<alloy:outputText value="#{i18n['disabled']}" />
 				</alloy:button>
 			</p>
 
 			<p>
 				<alloy:button styleClass="btn-primary btn-block">
-					<h:outputText value="#{i18n['block']}" />
+					<alloy:outputText value="#{i18n['block']}" />
 				</alloy:button>
 				<alloy:button styleClass="btn-block">
-					<h:outputText value="#{i18n['block']}" />
+					<alloy:outputText value="#{i18n['block']}" />
 				</alloy:button>
 			</p>
 		</showcase:example>
