--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/various-styles/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/various-styles/commandButton.xhtml
@@ -8,81 +8,81 @@
 			<showcase:example>
 				<p>
 					<alloy:commandButton styleClass="btn-primary">
-						<h:outputText value="#{i18n['primary']}" />
+						<alloy:outputText value="#{i18n['primary']}" />
 					</alloy:commandButton>
 					<alloy:commandButton styleClass="btn-info">
-						<h:outputText value="#{i18n['info']}" />
+						<alloy:outputText value="#{i18n['info']}" />
 					</alloy:commandButton>
 					<alloy:commandButton styleClass="btn-success">
-						<h:outputText value="#{i18n['success']} " />
+						<alloy:outputText value="#{i18n['success']} " />
 						<alloy:icon name="ok" />
 					</alloy:commandButton>
 					<alloy:commandButton styleClass="btn-warning">
-						<h:outputText value="#{i18n['warning']}" />
+						<alloy:outputText value="#{i18n['warning']}" />
 					</alloy:commandButton>
 					<alloy:commandButton styleClass="btn-danger">
 						<alloy:icon name="remove" />
-						<h:outputText value=" #{i18n['danger']}" />
+						<alloy:outputText value=" #{i18n['danger']}" />
 					</alloy:commandButton>
 					<alloy:commandButton styleClass="btn-inverse">
-						<h:outputText value="#{i18n['inverse']}" />
+						<alloy:outputText value="#{i18n['inverse']}" />
 					</alloy:commandButton>
 					<alloy:commandButton styleClass="btn-link">
-						<h:outputText value="#{i18n['link']}" />
+						<alloy:outputText value="#{i18n['link']}" />
 					</alloy:commandButton>
 				</p>
 
 				<p>
 					<alloy:commandButton styleClass="btn-primary btn-large">
-						<h:outputText value="#{i18n['large']}" />
+						<alloy:outputText value="#{i18n['large']}" />
 					</alloy:commandButton>
 					<alloy:commandButton styleClass="btn-large">
-						<h:outputText value="#{i18n['large']}" />
+						<alloy:outputText value="#{i18n['large']}" />
 					</alloy:commandButton>
 				</p>
 
 				<p>
 					<alloy:commandButton styleClass="btn-primary">
-						<h:outputText value="#{i18n['default']}" />
+						<alloy:outputText value="#{i18n['default']}" />
 					</alloy:commandButton>
 					<alloy:commandButton>
-						<h:outputText value="#{i18n['default']}" />
+						<alloy:outputText value="#{i18n['default']}" />
 					</alloy:commandButton>
 				</p>
 
 				<p>
 					<alloy:commandButton styleClass="btn-primary btn-small">
-						<h:outputText value="#{i18n['small']}" />
+						<alloy:outputText value="#{i18n['small']}" />
 					</alloy:commandButton>
 					<alloy:commandButton styleClass="btn-small">
-						<h:outputText value="#{i18n['small']}" />
+						<alloy:outputText value="#{i18n['small']}" />
 					</alloy:commandButton>
 				</p>
 
 				<p>
 					<alloy:commandButton styleClass="btn-primary btn-mini">
-						<h:outputText value="#{i18n['mini']}" />
+						<alloy:outputText value="#{i18n['mini']}" />
 					</alloy:commandButton>
 					<alloy:commandButton styleClass="btn-mini">
-						<h:outputText value="#{i18n['mini']}" />
+						<alloy:outputText value="#{i18n['mini']}" />
 					</alloy:commandButton>
 				</p>
 
 				<p>
 					<alloy:commandButton disabled="true" styleClass="btn-primary">
-						<h:outputText value="#{i18n['disabled']}" />
+						<alloy:outputText value="#{i18n['disabled']}" />
 					</alloy:commandButton>
 					<alloy:commandButton disabled="true">
-						<h:outputText value="#{i18n['disabled']}" />
+						<alloy:outputText value="#{i18n['disabled']}" />
 					</alloy:commandButton>
 				</p>
 
 				<p>
 					<alloy:commandButton styleClass="btn-primary btn-block">
-						<h:outputText value="#{i18n['block']}" />
+						<alloy:outputText value="#{i18n['block']}" />
 					</alloy:commandButton>
 					<alloy:commandButton styleClass="btn-block">
-						<h:outputText value="#{i18n['block']}" />
+						<alloy:outputText value="#{i18n['block']}" />
 					</alloy:commandButton>
 				</p>
 			</showcase:example>
