--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/localization/datePicker.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/localization/datePicker.xhtml
@@ -17,9 +17,9 @@
 				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="portugueseSelection" value="#{datePickerModelBean.birthday}">
+				<alloy:outputText id="portugueseSelection" value="#{datePickerModelBean.birthday}">
 					<f:convertDateTime pattern="#{portugueseDatePicker.datePattern}" />
-				</h:outputText>
+				</alloy:outputText>
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
@@ -38,9 +38,9 @@
 				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="japaneseSelection" value="#{datePickerModelBean.birthday}">
+				<alloy:outputText id="japaneseSelection" value="#{datePickerModelBean.birthday}">
 					<f:convertDateTime pattern="#{japaneseDatePicker.datePattern}" />
-				</h:outputText>
+				</alloy:outputText>
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
