--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/multiple-selection/datePicker.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/multiple-selection/datePicker.xhtml
@@ -15,7 +15,7 @@
 				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{datePickerModelBean.multiple}" />
+				<alloy:outputText id="modelValue" value="#{datePickerModelBean.multiple}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
@@ -32,7 +32,7 @@
 				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{datePickerModelBean.multiple}" />
+				<alloy:outputText id="modelValue" value="#{datePickerModelBean.multiple}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
