--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/instant-ajax/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/instant-ajax/inputDate.xhtml
@@ -11,9 +11,9 @@
 				</alloy:inputDate>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText value="#{inputDateModelBean.birthday}">
+				<alloy:outputText value="#{inputDateModelBean.birthday}">
 					<f:convertDateTime pattern="MM/dd/yyyy" />
-				</h:outputText>
+				</alloy:outputText>
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
