--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsourcecode/default-value/inputSourceCode.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsourcecode/default-value/inputSourceCode.xhtml
@@ -13,7 +13,7 @@
 			</h:commandButton>
 		</showcase:example>
 		<showcase:outputModel>
-			<h:outputText id="modelValue" value="#{inputSourceCodeModelBean.sourceText}" />
+			<alloy:outputText id="modelValue" value="#{inputSourceCodeModelBean.sourceText}" />
 		</showcase:outputModel>
 	</h:form>
 
