--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsourcecode/general/inputSourceCode.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsourcecode/general/inputSourceCode.xhtml
@@ -20,7 +20,7 @@
 			</h:commandButton>
 		</showcase:example>
 		<showcase:outputModel>
-			<h:outputText id="modelValue" value="#{inputSourceCodeModelBean.sourceCode}" />
+			<alloy:outputText id="modelValue" value="#{inputSourceCodeModelBean.sourceCode}" />
 		</showcase:outputModel>
 	</h:form>
 
