--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtext/immediate/inputText.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtext/immediate/inputText.xhtml
@@ -17,7 +17,7 @@
 				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{inputTextModelBean.text}" />
+				<alloy:outputText id="modelValue" value="#{inputTextModelBean.text}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
@@ -36,7 +36,7 @@
 				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{inputTextModelBean.text}" />
+				<alloy:outputText id="modelValue" value="#{inputTextModelBean.text}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
