--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtext/validation/inputText.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtext/validation/inputText.xhtml
@@ -15,7 +15,7 @@
 				<f:ajax execute="@form" render="@form" />
 			</alloy:commandButton>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{inputTextModelBean.text}" />
+				<alloy:outputText id="modelValue" value="#{inputTextModelBean.text}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
@@ -34,7 +34,7 @@
 				<f:ajax execute="@form" render="@form" />
 			</alloy:commandButton>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{inputTextModelBean.text}" />
+				<alloy:outputText id="modelValue" value="#{inputTextModelBean.text}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
