--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/conversion/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/conversion/selectOneRadio.xhtml
@@ -20,9 +20,9 @@
 				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{selectOneRadioModelBean.date}">
+				<alloy:outputText id="modelValue" value="#{selectOneRadioModelBean.date}">
 					<f:convertDateTime pattern="MMM d, yyyy G" />
-				</h:outputText>
+				</alloy:outputText>
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
