--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/default-value/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/default-value/selectOneRadio.xhtml
@@ -21,7 +21,7 @@
 				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{selectOneRadioModelBean.benefitId}" />
+				<alloy:outputText id="modelValue" value="#{selectOneRadioModelBean.benefitId}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
