--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/general/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/general/selectOneRadio.xhtml
@@ -22,7 +22,7 @@
 				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{selectOneRadioModelBean.favoriteId}" />
+				<alloy:outputText id="modelValue" value="#{selectOneRadioModelBean.favoriteId}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
