--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/instant-ajax/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/instant-ajax/selectOneRadio.xhtml
@@ -17,7 +17,7 @@
 				</alloy:selectOneRadio>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText value="#{selectOneRadioModelBean.favoriteId}" />
+				<alloy:outputText value="#{selectOneRadioModelBean.favoriteId}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
