--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/default-value/selectStarRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/default-value/selectStarRating.xhtml
@@ -20,7 +20,7 @@
 				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{selectStarRatingModelBean.benefitId}" />
+				<alloy:outputText id="modelValue" value="#{selectStarRatingModelBean.benefitId}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
