--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/instant-ajax/selectStarRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/instant-ajax/selectStarRating.xhtml
@@ -16,7 +16,7 @@
 				</alloy:selectStarRating>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{selectStarRatingModelBean.favoriteId}" />
+				<alloy:outputText id="modelValue" value="#{selectStarRatingModelBean.favoriteId}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
