--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectthumbrating/general/selectThumbRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectthumbrating/general/selectThumbRating.xhtml
@@ -16,7 +16,7 @@
 				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{selectThumbRatingModelBean.like}" />
+				<alloy:outputText id="modelValue" value="#{selectThumbRatingModelBean.like}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
