--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectthumbrating/instant-ajax/selectThumbRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectthumbrating/instant-ajax/selectThumbRating.xhtml
@@ -13,7 +13,7 @@
 				</alloy:selectThumbRating>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{selectThumbRatingModelBean.like}" />
+				<alloy:outputText id="modelValue" value="#{selectThumbRatingModelBean.like}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
