--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/general/button.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/general/button.xhtml
@@ -9,7 +9,7 @@
 			<showcase:example description="#{i18n['alloy-button-general-example-1']}" number="1" renderedCheckbox="true">
 				<alloy:button rendered="#{showcaseModelBean.selectedComponent.rendered}" value="1234">
 					<alloy:icon name="star" />
-					<h:outputText value=" #{i18n['Button']} " />
+					<alloy:outputText value=" #{i18n['Button']} " />
 					<h:graphicImage value="/resources/images/liferay-faces-logo-small.png" />
 				</alloy:button>
 			</showcase:example>
