--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/navigation/button.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/navigation/button.xhtml
@@ -6,12 +6,12 @@
 		<showcase:example>
 			<!-- Navigation based on outcome of navigation-case defined in navigation-rule.xml -->
 			<alloy:button outcome="toParam">
-				<h:outputText value="#{i18n['to-param-page']} " />
+				<alloy:outputText value="#{i18n['to-param-page']} " />
 				<alloy:icon name="arrow-right" />
 			</alloy:button>
 		</showcase:example>
 		<showcase:outputParameter>
-			<h:outputText id="parameterValue" value="foo=#{facesContext.externalContext.requestParameterMap['foo']}" />
+			<alloy:outputText id="parameterValue" value="foo=#{facesContext.externalContext.requestParameterMap['foo']}" />
 		</showcase:outputParameter>
 	</ui:define>
 
