--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/navigation/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/navigation/commandButton.xhtml
@@ -7,12 +7,12 @@
 			<showcase:example>
 				<!-- Navigation based on outcome of navigation-case defined in navigation-rule.xml -->
 				<alloy:commandButton action="toParam">
-					<h:outputText value="#{i18n['to-param-page']} " />
+					<alloy:outputText value="#{i18n['to-param-page']} " />
 					<alloy:icon name="arrow-right" />
 				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputParameter>
-				<h:outputText id="parameterValue" value="foo=#{facesContext.externalContext.requestParameterMap['foo']}" />
+				<alloy:outputText id="parameterValue" value="foo=#{facesContext.externalContext.requestParameterMap['foo']}" />
 			</showcase:outputParameter>
 		</h:form>
 	</ui:define>
