--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/param/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/param/commandButton.xhtml
@@ -9,7 +9,7 @@
 				<alloy:commandButton
 					action="/views/component.xhtml?faces-redirect=true&amp;componentPrefix=alloy&amp;componentName=commandbutton&amp;componentUseCase=navigation&amp;foo=1234">
 					<alloy:icon name="arrow-left" />
-					<h:outputText value=" #{i18n['back-to-navigation-with']} foo=1234" />
+					<alloy:outputText value=" #{i18n['back-to-navigation-with']} foo=1234" />
 				</alloy:commandButton>
 			</showcase:example>
 		</h:form>
