--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtextarea/general/inputTextarea.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtextarea/general/inputTextarea.xhtml
@@ -16,7 +16,7 @@
 				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{inputTextModelBean.text}" />
+				<alloy:outputText id="modelValue" value="#{inputTextModelBean.text}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
