--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtextarea/size/inputTextarea.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtextarea/size/inputTextarea.xhtml
@@ -13,7 +13,7 @@
 				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{inputTextModelBean.text}" />
+				<alloy:outputText id="modelValue" value="#{inputTextModelBean.text}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
@@ -28,7 +28,7 @@
 				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{inputTextModelBean.text}" />
+				<alloy:outputText id="modelValue" value="#{inputTextModelBean.text}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
