--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputremainingchars/general/outputRemainingChars.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputremainingchars/general/outputRemainingChars.xhtml
@@ -18,7 +18,7 @@
 				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{outputRemainingCharsModelBean.text}" />
+				<alloy:outputText id="modelValue" value="#{outputRemainingCharsModelBean.text}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
@@ -37,7 +37,7 @@
 				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{outputRemainingCharsModelBean.text}" />
+				<alloy:outputText id="modelValue" value="#{outputRemainingCharsModelBean.text}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
