--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/immediate/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/immediate/selectOneRadio.xhtml
@@ -23,7 +23,7 @@
 				<f:ajax execute="@form" render="@form" />
 			</h:commandButton>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{selectOneRadioModelBean.favoriteId}" />
+				<alloy:outputText id="modelValue" value="#{selectOneRadioModelBean.favoriteId}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
@@ -49,7 +49,7 @@
 				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{selectOneRadioModelBean.favoriteId}" />
+				<alloy:outputText id="modelValue" value="#{selectOneRadioModelBean.favoriteId}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
