--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/min-max-date/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/min-max-date/inputDate.xhtml
@@ -19,9 +19,9 @@
 					<f:convertDateTime pattern="MM/dd/yyyy" />
 				</alloy:outputText>
 				<hr />
-				<h:commandButton value="#{i18n['submit']}">
+				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
-				</h:commandButton>
+				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="modelValue" value="#{inputDateModelBean.birthday}">
