--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/default-value/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/default-value/selectOneRadio.xhtml
@@ -16,9 +16,9 @@
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
 				</alloy:selectOneRadio>
 				<hr />
-				<h:commandButton action="#{selectOneRadioBackingBean.submit}" value="#{i18n['submit']}">
+				<alloy:commandButton action="#{selectOneRadioBackingBean.submit}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
-				</h:commandButton>
+				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="modelValue" value="#{selectOneRadioModelBean.benefitId}" />
