--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/default-value/selectStarRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/default-value/selectStarRating.xhtml
@@ -15,9 +15,9 @@
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
 				</alloy:selectStarRating>
 				<hr />
-				<h:commandButton action="#{selectStarRatingBackingBean.submit}" value="#{i18n['submit']}">
+				<alloy:commandButton action="#{selectStarRatingBackingBean.submit}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
-				</h:commandButton>
+				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="modelValue" value="#{selectStarRatingModelBean.benefitId}" />
