--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/date-pattern/datePicker.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/date-pattern/datePicker.xhtml
@@ -11,9 +11,9 @@
 				</h:inputText>
 				<alloy:datePicker for="birthday" datePattern="EEEE, MMM dd, yyyy" />
 				<hr />
-				<h:commandButton value="#{i18n['submit']}">
+				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
-				</h:commandButton>
+				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="modelValue" value="#{datePickerModelBean.birthday}">
