--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/localization/datePicker.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/localization/datePicker.xhtml
@@ -12,9 +12,9 @@
 					<f:convertDateTime pattern="#{portugueseDatePicker.datePattern}" />
 				</h:inputText>
 				<hr />
-				<h:commandButton value="#{i18n['submit']}">
+				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
-				</h:commandButton>
+				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="portugueseSelection" value="#{datePickerModelBean.birthday}">
@@ -33,9 +33,9 @@
 					<f:convertDateTime pattern="#{japaneseDatePicker.datePattern}" />
 				</h:inputText>
 				<hr />
-				<h:commandButton value="#{i18n['submit']}">
+				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
-				</h:commandButton>
+				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="japaneseSelection" value="#{datePickerModelBean.birthday}">
