--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsourcecode/general/inputSourceCode.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsourcecode/general/inputSourceCode.xhtml
@@ -15,9 +15,9 @@
 				required="#{showcaseModelBean.selectedComponent.required}" value="#{inputSourceCodeModelBean.sourceCode}" />
 			<h:message for="inputSourceCode" />
 			<hr />
-			<h:commandButton action="#{inputSourceCodeBackingBean.submit}" value="#{i18n['submit']}">
+			<alloy:commandButton action="#{inputSourceCodeBackingBean.submit}" value="#{i18n['submit']}">
 				<f:ajax execute="@form" render="@form" />
-			</h:commandButton>
+			</alloy:commandButton>
 		</showcase:example>
 		<showcase:outputModel>
 			<alloy:outputText id="modelValue" value="#{inputSourceCodeModelBean.sourceCode}" />
