--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/general/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/general/selectOneRadio.xhtml
@@ -17,9 +17,9 @@
 				</alloy:selectOneRadio>
 				<h:message for="selectOneRadio" />
 				<hr />
-				<h:commandButton action="#{selectOneRadioBackingBean.submit}" value="#{i18n['submit']}">
+				<alloy:commandButton action="#{selectOneRadioBackingBean.submit}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
-				</h:commandButton>
+				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="modelValue" value="#{selectOneRadioModelBean.favoriteId}" />
