--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/data-model/selectStarRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/data-model/selectStarRating.xhtml
@@ -11,9 +11,9 @@
 						itemLabel="#{benefit.label}" />
 				</alloy:selectStarRating>
 				<hr />
-				<h:commandButton action="#{selectStarRatingBackingBean.submit}" value="#{i18n['submit']}">
+				<alloy:commandButton action="#{selectStarRatingBackingBean.submit}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
-				</h:commandButton>
+				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="modelValue" value="#{selectStarRatingModelBean.favoriteId}" />
