--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectthumbrating/general/selectThumbRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectthumbrating/general/selectThumbRating.xhtml
@@ -11,9 +11,9 @@
 					<f:selectItem itemLabel="#{i18n['dislike']}" itemValue="false" />
 				</alloy:selectThumbRating>
 				<hr />
-				<h:commandButton value="#{i18n['submit']}">
+				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
-				</h:commandButton>
+				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText id="modelValue" value="#{selectThumbRatingModelBean.like}" />
